...
            icon: Icon(Icons.dashboard_outlined), label: 'Painel'),
        BottomNavigationBarItem(
            icon: Icon(Icons.inbox_outlined), label: 'Aprovações'),
        BottomNavigationBarItem(
            icon: Icon(Icons.people_alt_outlined), label: 'Clientes'),
        BottomNavigationBarItem(
            icon: Icon(Icons.inventory_2_outlined), label: 'Produtos'),
        BottomNavigationBarItem(
            icon: Icon(Icons.storefront_outlined), label: 'Pontos'),
      ],
    ),
    branches: [
      StatefulShellBranch(routes: [
...
